--- a/refinement/urbansim_refine_input.ipynb
+++ b/refinement/urbansim_refine_input.ipynb
@@ -33,16 +33,17 @@
     "\n",
     "#input development\n",
     "#1. geo cross walk table:\n",
-    "#specify refine geo unit: city, taz, blkgrp, parcels; test city for now\n",
-    "#specify sample unit: test city for now\n",
+    "    #specify refine target geo: city, taz, blkgrp, parcels\n",
+    "    #specify sample unit: city, taz, blkgrp, parcels\n",
+    "    #settings: sample geography = \"SAMPLEGEO\"\n",
     "\n",
     "#2. control table\n",
-    "#convert from control totals: \n",
-    "    # read categorical info and fill control table\n",
-    "    # summarize inputs by categories to use as baseline\n",
-    "#new controls: \n",
-    "    #a. manual modify specific controls \n",
-    "    #b. read target database and make controls by category\n",
+    "    #convert from control totals: \n",
+    "        # read categorical info and fill control table\n",
+    "        # summarize inputs by categories to use as baseline\n",
+    "    #new controls: \n",
+    "        #a. manual modify specific controls \n",
+    "        #b. read target database and make controls by category\n",
     "\n",
     "#3. seed tables\n",
     "    #base inputs with sample and refine geo units\n",
@@ -51,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,32 +72,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def building_geos(st, year, ren_dict):\n",
-    "    \"\"\"st: HDF store\n",
+    "def building_geos(st, year):\n",
+    "    \"\"\" \n",
+    "    function: add a set of geograpies to buildings based on 2045 Urbansim model dataset\n",
+    "    st: HDF file, urbansim model data\n",
     "    year: year string \n",
-    "    ren dict: rename columns to new columns\n",
+    "    ren dict: dictionary for rename columns\n",
     "    \"\"\"\n",
+    "    ren_dict = {'b_city_id':'CITY', 'county_id': 'COUNTY', \n",
+    "                'census_bg_id': 'BLKGRPID', 'b_zone_id':'TAZ'}\n",
     "    dfgeo = pd.merge(st[year + '/buildings'][['parcel_id','b_city_id', 'b_zone_id']], \n",
     "                        st[year + '/parcels'][['census_bg_id','county_id']], \n",
     "                        left_on='parcel_id', right_index= True, how='left' )\n",
     "    dfgeo.rename(columns = ren_dict, inplace=True)\n",
+    "    dfgeo['BLKGRPID'] = dfgeo['COUNTY'] * (10**7) + dfgeo['BLKGRPID']\n",
+    "    dfgeo['TRACTID'] =  dfgeo['BLKGRPID'] // 10\n",
+    "    dfgeo['REGION'] = 2\n",
     "\n",
     "    return dfgeo"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "target_geo = 'CITY'\n",
+    "sample_geo = 'CITY'\n",
     "year = '2045'\n",
-    "geo_units = ['COUNTY', 'CITY','TAZ', 'BLKGRPID']\n",
+    "geo_units = ['COUNTY', 'CITY','TAZ', 'TRACTID', 'BLKGRPID', 'REGION']\n",
     "prj_name = 'refine'\n",
     "\n",
     "hdf_in = 'run4032_45.h5'\n",
@@ -114,24 +123,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": "geo_cross_walk:  refine_geo_cross_walk.csv\n"
-    }
-   ],
+   "outputs": [],
    "source": [
     "st= pd.HDFStore(hdf_in, 'r')\n",
-    "ren_dict = {'b_city_id':'CITY', 'county_id': 'COUNTY', 'census_bg_id': 'BLKGRPID', 'b_zone_id':'TAZ'}\n",
-    "dfgeo = building_geos(st, year, ren_dict)\n",
     "\n",
+    "dfgeo = building_geos(st, year)\n",
     "dfgeo = dfgeo.loc[dfgeo.COUNTY == 125] #sele t Oakland for now\n",
-    "dfgeo['PUMA'] = dfgeo[target_geo]\n",
-    "geocross = dfgeo.drop_duplicates(target_geo)[geo_units + ['PUMA']]\n",
-    "geocross['REGION'] = 2\n",
+    "\n",
+    "geocross = dfgeo.drop_duplicates(target_geo)[geo_units]\n",
+    "geocross['SAMPLEGEO'] = geocross[sample_geo]\n",
     "geocross = geocross.astype(int)\n",
     "\n",
     "geocross.to_csv(prj_name + '_geo_cross_walk.csv')\n",
@@ -149,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,14 +175,15 @@
     "                expression = '({}.{}>={})'.format(seed_tbl, c, str(vmin))\n",
     "            else:\n",
     "                expression = '({}.{}>={}) & ({}.{}<={})'.format(seed_tbl, c, str(vmin), seed_tbl, c, str(vmax))\n",
-    "            dfctrl.loc[indv]= [vname + str(vmin), target_geo, seed_tbl, 500, vname.upper() + str(ccount), expression]\n",
+    "            dfctrl.loc[indv]= [vname + str(vmin), target_geo, seed_tbl, 500, \n",
+    "                                    vname.upper() + str(ccount), expression]\n",
     "\n",
     "    return dfctrl"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,15 +204,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": "config control table:  refine_controls.csv\n"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# build config control table using annual_household_control_totals\n",
     "seed_tbl = 'households'\n",
@@ -222,18 +219,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": "config control table:  refine_controls.csv\n"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# add person controls to config controls\n",
-    "ptarget_geo = 'CITY'\n",
+    "# (optional, only when person controls are desired)\n",
+    "# add person controls to config controls \n",
+    "ptarget_geo = 'TAZ'\n",
     "pseed_tbl = 'persons'\n",
     "dict_pcats = {\n",
     "    'age':[[0, 17], [18, 24], [25, 64], [65, -1]],\n",
@@ -257,26 +249,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "#special case: already have target database\n",
     "#prepare households and persons tables for summarization purpose(refined/official results)\n",
     "\n",
-    "bldg_geos = building_geos(stc, year, ren_dict)\n",
+    "bldg_geos = building_geos(stc, year)\n",
     "\n",
     "households = pd.merge(stc[year + '/households'], bldg_geos[geo_units], \n",
     "                                        left_on='building_id', right_index= True, how='left' )\n",
     "households = households.loc[households.COUNTY == 125]\n",
-    "households['PUMA'] = households['CITY']\n",
+    "# households['PUMA'] = households['CITY']\n",
     "households.dropna(axis=0, inplace=True)\n",
     "households = households.astype(int)\n",
     "\n",
     "\n",
     "persons = pd.merge(stc[year + '/persons'], households[geo_units], \n",
     "                                        left_on='household_id', right_index= True, how='left' )\n",
-    "persons['PUMA'] = persons['CITY']\n",
+    "# persons['PUMA'] = persons['CITY']\n",
     "persons.dropna(axis=0, inplace=True)\n",
     "persons = persons.astype(int)\n",
     ""
@@ -284,17 +276,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": "geography control table:  refine_control_totals_city.csv\n"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#summarize target HH distribution based on config_controls\n",
+    "#single geo level for now\n",
+    "\n",
     "for ind, r in simctrl.iterrows():\n",
     "    sr = pd.eval('{}.loc[{}]'.format(r.seed_table, r.expression)).groupby([r.geography]).size()\n",
     "    sr.name = r.control_field\n",
@@ -304,13 +292,22 @@
     "        sumt = sr\n",
     "\n",
     "geo_ctrl = pd.DataFrame(sumt)\n",
-    "geo_ctrl[\"PUMA\"] = geo_ctrl.index.values\n",
+    "geo_ctrl.index.name = target_geo\n",
     "geo_ctrl['REGION'] = 2\n",
     "geo_ctrl.fillna(0, inplace=True)\n",
     "geo_ctrl = geo_ctrl.astype(int)\n",
     "\n",
     "geo_ctrl.to_csv('{}_control_totals_{}.csv'.format(prj_name, target_geo.lower()))\n",
     "print('geography control table: ', '{}_control_totals_{}.csv'.format(prj_name, target_geo.lower()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "geo_ctrl.to_csv('{}_control_totals_{}.csv'.format(prj_name, target_geo.lower()))"
    ]
   },
   {
@@ -324,51 +321,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": "seed households table:  refine_seed_households.csv\n"
-    }
-   ],
+   "outputs": [],
    "source": [
+    "# make hhs sample data\n",
+    "bldg_geos = building_geos(st, year)\n",
     "\n",
-    "bldg_geos = building_geos(st, year, ren_dict)\n",
-    "\n",
-    "hhs = pd.merge(st[year + '/households'], bldg_geos[['CITY', 'COUNTY']], \n",
-    "                                    left_on='building_id', right_index= True,how='left') \n",
-    "hhs = hhs.loc[hhs.COUNTY == 125]                       \n",
-    "hhs['PUMA'] = hhs['CITY']\n",
+    "hhs = pd.merge(st[year + '/households'], bldg_geos[geo_units], \n",
+    "                        left_on='building_id', right_index= True,how='left') \n",
+    "hhs = hhs.loc[hhs[sample_geo].isin(geocross[sample_geo].unique())]\n",
+    "hhs['SAMPLEGEO'] = hhs[sample_geo]                      \n",
     "hhs['WGTP'] = 1\n",
-    "hhs['REGION'] = 2\n",
     "hhs = hhs.astype(int)\n",
-    "#hhs.index.name = 'hhnum'\n",
+    "\n",
     "hhs.to_csv(prj_name + '_seed_households.csv')\n",
     "print('seed households table: ', prj_name + '_seed_households.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": "seed persons table:  refine_seed_persons.csv\n"
-    }
-   ],
-   "source": [
-    "pps = pd.merge(st[year + '/persons'], hhs[['CITY','PUMA','COUNTY']], \n",
-    "                                    left_on='household_id', right_index=True, how='left')\n",
-    "pps = pps.loc[pps.COUNTY == 125]\n",
-    "pps = pps.astype(int)\n",
-    "pps['PWGTP'] = 1\n",
-    "#pps.rename(columns={'household_id':'hhnum'}, inplace=True)\n",
-    "pps.to_csv(prj_name + '_seed_persons.csv')\n",
-    "print('seed persons table: ', prj_name + '_seed_persons.csv')"
    ]
   },
   {
@@ -376,7 +344,17 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "pps = pd.merge(st[year + '/persons'], hhs[geo_units], \n",
+    "                            left_on='household_id', right_index=True, how='left')\n",
+    "pps = pps.loc[pps[sample_geo].isin(geocross[sample_geo].unique())]\n",
+    "pps = pps.astype(int)\n",
+    "pps['PWGTP'] = 1\n",
+    "pps['SAMPLEGEO'] = pps[sample_geo] \n",
+    "#pps.rename(columns={'household_id':'hhnum'}, inplace=True)\n",
+    "pps.to_csv(prj_name + '_seed_persons.csv')\n",
+    "print('seed persons table: ', prj_name + '_seed_persons.csv')"
+   ]
   },
   {
    "cell_type": "code",
