branch and improved sample cross-walk to script

--- a/refinement/urbansim_refine_input.ipynb
+++ b/refinement/urbansim_refine_input.ipynb
@@ -47,12 +47,13 @@
     "\n",
     "#3. seed tables\n",
     "    #base inputs with sample and refine geo units\n",
-    "\n"
+    "\n",
+    ""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,20 +73,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def building_geos(st, year):\n",
+    "def building_geos(st, year, weight = None):\n",
     "    \"\"\" \n",
     "    function: add a set of geograpies to buildings based on 2045 Urbansim model dataset\n",
     "    st: HDF file, urbansim model data\n",
     "    year: year string \n",
     "    ren dict: dictionary for rename columns\n",
     "    \"\"\"\n",
-    "    ren_dict = {'b_city_id':'CITY', 'county_id': 'COUNTY', \n",
-    "                'census_bg_id': 'BLKGRPID', 'b_zone_id':'TAZ'}\n",
-    "    dfgeo = pd.merge(st[year + '/buildings'][['parcel_id','b_city_id', 'b_zone_id']], \n",
+    "    ren_dict = {'b_city_id':'CITY', 'county_id':'COUNTY', 'census_bg_id':'BLKGRPID', 'b_zone_id':'TAZ'}\n",
+    "    weight = [] if not(weight) else [weight]\n",
+    "    dfgeo = pd.merge(st[year + '/buildings'][['parcel_id','b_city_id', 'b_zone_id'] + weight], \n",
     "                        st[year + '/parcels'][['census_bg_id','county_id']], \n",
     "                        left_on='parcel_id', right_index= True, how='left' )\n",
     "    dfgeo.rename(columns = ren_dict, inplace=True)\n",
@@ -98,14 +99,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "target_geo = 'CITY'\n",
+    "target_geo = 'TAZ'\n",
     "sample_geo = 'CITY'\n",
     "year = '2045'\n",
     "geo_units = ['COUNTY', 'CITY','TAZ', 'TRACTID', 'BLKGRPID', 'REGION']\n",
+    "weight = 'residential_units'\n",
     "prj_name = 'refine'\n",
     "\n",
     "hdf_in = 'run4032_45.h5'\n",
@@ -123,21 +125,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "geo_cross_walk:  refine_geo_cross_walk.csv\n"
+    }
+   ],
    "source": [
     "st= pd.HDFStore(hdf_in, 'r')\n",
     "\n",
-    "dfgeo = building_geos(st, year)\n",
+    "dfgeo = building_geos(st, year, weight)\n",
     "dfgeo = dfgeo.loc[dfgeo.COUNTY == 125] #sele t Oakland for now\n",
     "\n",
-    "geocross = dfgeo.drop_duplicates(target_geo)[geo_units]\n",
+    "dfgeo_grpby = dfgeo.groupby([target_geo, sample_geo])[weight].sum().to_frame(weight).reset_index()\n",
+    "geocross = dfgeo_grpby.sort_values(by=[target_geo, weight], ascending = False).drop_duplicates(target_geo)\n",
+    "geocross = geocross.drop_duplicates(target_geo)\n",
     "geocross['SAMPLEGEO'] = geocross[sample_geo]\n",
+    "geocross['REGION'] = 2\n",
     "geocross = geocross.astype(int)\n",
     "\n",
     "geocross.to_csv(prj_name + '_geo_cross_walk.csv')\n",
-    "print('geo_cross_walk: ', prj_name + '_geo_cross_walk.csv')"
+    "print('geo_cross_walk: ', prj_name + '_geo_cross_walk.csv')\n",
+    ""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# st= pd.HDFStore(hdf_in, 'r')\n",
+    "\n",
+    "# dfgeo = building_geos(st, year)\n",
+    "# dfgeo = dfgeo.loc[dfgeo.COUNTY == 125] #sele t Oakland for now\n",
+    "\n",
+    "# geocross = dfgeo.drop_duplicates(target_geo)[geo_units]\n",
+    "# geocross['SAMPLEGEO'] = geocross[sample_geo]\n",
+    "# geocross = geocross.astype(int)\n",
+    "\n",
+    "# geocross.to_csv(prj_name + '_geo_cross_walk.csv')\n",
+    "# print('geo_cross_walk: ', prj_name + '_geo_cross_walk.csv')"
    ]
   },
   {
@@ -151,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,9 +235,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "config control table:  refine_controls.csv\n"
+    }
+   ],
    "source": [
     "# build config control table using annual_household_control_totals\n",
     "seed_tbl = 'households'\n",
@@ -219,9 +256,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "config control table:  refine_controls.csv\n"
+    }
+   ],
    "source": [
     "# (optional, only when person controls are desired)\n",
     "# add person controls to config controls \n",
@@ -249,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -276,9 +319,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "geography control table:  refine_control_totals_taz.csv\n"
+    }
+   ],
    "source": [
     "#summarize target HH distribution based on config_controls\n",
     "#single geo level for now\n",
@@ -302,15 +351,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "geo_ctrl.to_csv('{}_control_totals_{}.csv'.format(prj_name, target_geo.lower()))"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -321,9 +361,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "seed households table:  refine_seed_households.csv\n"
+    }
+   ],
    "source": [
     "# make hhs sample data\n",
     "bldg_geos = building_geos(st, year)\n",
@@ -341,9 +387,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "seed persons table:  refine_seed_persons.csv\n"
+    }
+   ],
    "source": [
     "pps = pd.merge(st[year + '/persons'], hhs[geo_units], \n",
     "                            left_on='household_id', right_index=True, how='left')\n",
@@ -355,13 +407,6 @@
     "pps.to_csv(prj_name + '_seed_persons.csv')\n",
     "print('seed persons table: ', prj_name + '_seed_persons.csv')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
