revise and add sampling strategies

--- a/refinement/urbansim_refine_input.ipynb
+++ b/refinement/urbansim_refine_input.ipynb
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +82,7 @@
     "    function: add a set of geograpies to buildings based on 2045 Urbansim model dataset\n",
     "    st: HDF file, urbansim model data\n",
     "    year: year string \n",
-    "    ren dict: dictionary for rename columns\n",
+    "    weight: column use to evaluate overlaps between target area and sampling area\n",
     "    \"\"\"\n",
     "    ren_dict = {'b_city_id':'CITY', 'county_id':'COUNTY', 'census_bg_id':'BLKGRPID', 'b_zone_id':'TAZ'}\n",
     "    weight = [] if not(weight) else [weight]\n",
@@ -99,16 +99,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "sampling_strategy = 'ALL'  # \"ALL\" = sample from all overlaping areas or One (default only the largest one)\n",
     "target_geo = 'TAZ'\n",
     "sample_geo = 'CITY'\n",
     "year = '2045'\n",
     "geo_units = ['COUNTY', 'CITY','TAZ', 'TRACTID', 'BLKGRPID', 'REGION']\n",
     "weight = 'residential_units'\n",
     "prj_name = 'refine'\n",
+    "new_id_base = 2 * 10 ** 10\n",
     "\n",
     "hdf_in = 'run4032_45.h5'\n",
     "hdf_target = 'run4032_taz_draft_ypsi.h5'"
@@ -125,15 +127,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": "geo_cross_walk:  refine_geo_cross_walk.csv\n"
-    }
-   ],
+   "outputs": [],
    "source": [
     "st= pd.HDFStore(hdf_in, 'r')\n",
     "\n",
@@ -141,35 +137,35 @@
     "dfgeo = dfgeo.loc[dfgeo.COUNTY == 125] #sele t Oakland for now\n",
     "\n",
     "dfgeo_grpby = dfgeo.groupby([target_geo, sample_geo])[weight].sum().to_frame(weight).reset_index()\n",
-    "geocross = dfgeo_grpby.sort_values(by=[target_geo, weight], ascending = False).drop_duplicates(target_geo)\n",
-    "geocross = geocross.drop_duplicates(target_geo)\n",
+    "\n",
+    "geocross_all = dfgeo_grpby.sort_values(by=[target_geo, weight], ascending = False)\n",
+    "geocross = geocross_all.drop_duplicates(target_geo)\n",
     "geocross['SAMPLEGEO'] = geocross[sample_geo]\n",
+    "\n",
+    "#two sampling method\n",
+    "# method 1, link target area with 1 sample area having largest overlap (# of HUs in this case)\n",
+    "# method 2, link target area with all overlaping areas, need to keep geocross_all table\n",
+    "if sampling_strategy == 'ALL':\n",
+    "    dup_geo = geocross_all.loc[geocross_all.duplicated(target_geo)][target_geo].unique()\n",
+    "    geocross_dup = geocross_all.loc[geocross_all[target_geo].isin(dup_geo)]\n",
+    "    geocross.loc[geocross[target_geo].isin(geocross_dup[target_geo].unique()), 'SAMPLEGEO'] = geocross[target_geo] + new_id_base\n",
+    "\n",
+    "print('sampling_strategy:', sampling_strategy)\n",
+    "\n",
     "geocross['REGION'] = 2\n",
-    "geocross = geocross.astype(int)\n",
+    "geocross = geocross.astype('int64')\n",
     "\n",
     "geocross.to_csv(prj_name + '_geo_cross_walk.csv')\n",
     "print('geo_cross_walk: ', prj_name + '_geo_cross_walk.csv')\n",
-    ""
+    "print('geocross:', len(geocross), '   geocross_all:', len(geocross_all))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# st= pd.HDFStore(hdf_in, 'r')\n",
-    "\n",
-    "# dfgeo = building_geos(st, year)\n",
-    "# dfgeo = dfgeo.loc[dfgeo.COUNTY == 125] #sele t Oakland for now\n",
-    "\n",
-    "# geocross = dfgeo.drop_duplicates(target_geo)[geo_units]\n",
-    "# geocross['SAMPLEGEO'] = geocross[sample_geo]\n",
-    "# geocross = geocross.astype(int)\n",
-    "\n",
-    "# geocross.to_csv(prj_name + '_geo_cross_walk.csv')\n",
-    "# print('geo_cross_walk: ', prj_name + '_geo_cross_walk.csv')"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -182,11 +178,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "def cats_to_ctrl(dict_cats, target_geo, seed_tbl, dfctrl = None):\n",
+    "    \"\"\" Convert UrbanSim HH control total categories to Popsim config control table\n",
+    "        dict_cats: category dict\n",
+    "        target_geo: refinement geo unit\n",
+    "        seed_tbl: value for seed_table column\n",
+    "        dfctrl: existing control table \n",
+    "    \"\"\"\n",
+    "\n",
     "    if dfctrl is None:\n",
     "        dfctrl = pd.DataFrame(columns = ['target', 'geography', 'seed_table', \n",
     "                                            'importance', 'control_field', 'expression'])\n",
@@ -214,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,15 +238,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": "config control table:  refine_controls.csv\n"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# build config control table using annual_household_control_totals\n",
     "seed_tbl = 'households'\n",
@@ -256,15 +253,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": "config control table:  refine_controls.csv\n"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# (optional, only when person controls are desired)\n",
     "# add person controls to config controls \n",
@@ -292,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -308,26 +299,18 @@
     "households.dropna(axis=0, inplace=True)\n",
     "households = households.astype(int)\n",
     "\n",
-    "\n",
     "persons = pd.merge(stc[year + '/persons'], households[geo_units], \n",
     "                                        left_on='household_id', right_index= True, how='left' )\n",
     "# persons['PUMA'] = persons['CITY']\n",
     "persons.dropna(axis=0, inplace=True)\n",
-    "persons = persons.astype(int)\n",
-    ""
+    "persons = persons.astype('int64')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": "geography control table:  refine_control_totals_taz.csv\n"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#summarize target HH distribution based on config_controls\n",
     "#single geo level for now\n",
@@ -344,7 +327,7 @@
     "geo_ctrl.index.name = target_geo\n",
     "geo_ctrl['REGION'] = 2\n",
     "geo_ctrl.fillna(0, inplace=True)\n",
-    "geo_ctrl = geo_ctrl.astype(int)\n",
+    "geo_ctrl = geo_ctrl.astype('int64')\n",
     "\n",
     "geo_ctrl.to_csv('{}_control_totals_{}.csv'.format(prj_name, target_geo.lower()))\n",
     "print('geography control table: ', '{}_control_totals_{}.csv'.format(prj_name, target_geo.lower()))"
@@ -361,51 +344,100 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": "seed households table:  refine_seed_households.csv\n"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# make hhs sample data\n",
+    "# make sample data\n",
     "bldg_geos = building_geos(st, year)\n",
     "\n",
-    "hhs = pd.merge(st[year + '/households'], bldg_geos[geo_units], \n",
+    "hhs_total = pd.merge(st[year + '/households'], bldg_geos[geo_units], \n",
     "                        left_on='building_id', right_index= True,how='left') \n",
-    "hhs = hhs.loc[hhs[sample_geo].isin(geocross[sample_geo].unique())]\n",
-    "hhs['SAMPLEGEO'] = hhs[sample_geo]                      \n",
-    "hhs['WGTP'] = 1\n",
-    "hhs = hhs.astype(int)\n",
-    "\n",
-    "hhs.to_csv(prj_name + '_seed_households.csv')\n",
-    "print('seed households table: ', prj_name + '_seed_households.csv')"
+    "pps_total = pd.merge(st[year + '/persons'], hhs_total[geo_units], \n",
+    "                            left_on='household_id', right_index=True, how='left')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": "seed persons table:  refine_seed_persons.csv\n"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "pps = pd.merge(st[year + '/persons'], hhs[geo_units], \n",
-    "                            left_on='household_id', right_index=True, how='left')\n",
-    "pps = pps.loc[pps[sample_geo].isin(geocross[sample_geo].unique())]\n",
-    "pps = pps.astype(int)\n",
+    "# sample data for sample_geos\n",
+    "geocross = geocross.loc[geocross['SAMPLEGEO'] <= new_id_base]\n",
+    "\n",
+    "hhs = hhs_total.loc[hhs_total[sample_geo].isin(geocross[sample_geo].unique())]\n",
+    "hhs['SAMPLEGEO'] = hhs[sample_geo]                      \n",
+    "hhs['WGTP'] = 1\n",
+    "hhs = hhs.astype('int64')\n",
+    "\n",
+    "pps = pps_total.loc[pps_total[sample_geo].isin(geocross[sample_geo].unique())]\n",
+    "pps['SAMPLEGEO'] = pps[sample_geo]\n",
     "pps['PWGTP'] = 1\n",
-    "pps['SAMPLEGEO'] = pps[sample_geo] \n",
-    "#pps.rename(columns={'household_id':'hhnum'}, inplace=True)\n",
-    "pps.to_csv(prj_name + '_seed_persons.csv')\n",
-    "print('seed persons table: ', prj_name + '_seed_persons.csv')"
+    "pps = pps.astype('int64')\n",
+    "\n",
+    "if sampling_strategy != 'ALL':\n",
+    "    hhs.to_csv(prj_name + '_seed_households.csv')\n",
+    "    print('seed households table: ', prj_name + '_seed_households.csv')\n",
+    "    pps.to_csv(prj_name + '_seed_persons.csv')\n",
+    "    print('seed persons table: ', prj_name + '_seed_persons.csv')\n",
+    "\n",
+    ""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# if sampling from all overlapping area\n",
+    "if sampling_strategy == 'ALL':\n",
+    "    hhlst = []\n",
+    "    hhind = new_id_base\n",
+    "    pplst = []\n",
+    "    ppind = new_id_base\n",
+    "\n",
+    "    for geo, dfg in geocross_dup.groupby(target_geo):   \n",
+    "        for ind, r in dfg.iterrows():\n",
+    "\n",
+    "            hh_lc = hhs_total.loc[hhs_total[sample_geo] == r[sample_geo]]\n",
+    "            hh_lc['SAMPLEGEO'] = geo\n",
+    "            hh_lc['new_hhid'] = range(hhind, hhind + len(hh_lc))\n",
+    "            hhlst.append(hh_lc)\n",
+    "            hhind += len(hh_lc)\n",
+    "\n",
+    "            pp_lc = pps_total.loc[pps_total[sample_geo] == r[sample_geo]]\n",
+    "            pp_lc['SAMPLEGEO'] = geo\n",
+    "            pp_lc = pd.merge(pp_lc, hh_lc[['new_hhid']], left_on = 'household_id', right_index =True, how ='left')\n",
+    "            pp_lc['new_pid'] = range(ppind, ppind + len(pp_lc))\n",
+    "            pplst.append(pp_lc)\n",
+    "            ppind += len(pp_lc)\n",
+    "\n",
+    "    dfhhs = pd.concat(hhlst)\n",
+    "    dfhhs['SAMPLEGEO'] = dfhhs['SAMPLEGEO'] + new_id_base \n",
+    "    dfhhs['WGTP'] = 1\n",
+    "    dfhhs.index = dfhhs['new_hhid']\n",
+    "    dfhhs.drop('new_hhid', axis=1, inplace=True)\n",
+    "    hhs = pd.concat([hhs, dfhhs])\n",
+    "    hhs.index.name = 'household_id'\n",
+    "    hhs = hhs.astype('int64')\n",
+    "\n",
+    "    hhs.to_csv(prj_name + '_seed_households.csv')\n",
+    "    print('seed households table: ', prj_name + '_seed_households.csv')\n",
+    "\n",
+    "    dfpps = pd.concat(pplst)\n",
+    "    dfpps['SAMPLEGEO'] = dfpps['SAMPLEGEO'] + new_id_base\n",
+    "    dfpps['PWGTP'] = 1\n",
+    "    dfpps['household_id'] = dfpps['new_hhid']\n",
+    "    dfpps.index = dfpps['new_pid']\n",
+    "    dfpps.drop(['new_hhid','new_pid'], axis=1, inplace=True)\n",
+    "    pps = pd.concat([pps, dfpps])\n",
+    "    pps.index.name = 'person_id'\n",
+    "    pps = pps.astype('int64')\n",
+    "\n",
+    "    pps.to_csv(prj_name + '_seed_persons.csv')\n",
+    "    print('seed persons table: ', prj_name + '_seed_persons.csv')"
    ]
   },
   {
