--- a/refinement/urbansim_refine_input.ipynb
+++ b/refinement/urbansim_refine_input.ipynb
@@ -103,7 +103,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sampling_strategy = 'ALL'  # \"ALL\" = sample from all overlaping areas or One (default only the largest one)\n",
+    "\n",
+    "# three sampling strategies:\n",
+    "# 1. \"LARGEST\": sampling from largest linked area (default)\n",
+    "# 2. \"OVERLAP\": sampling from largest and the overlapped proportions\n",
+    "# 3. \"ALL\" = sample from all areas overalapping target area \n",
+    "sampling_strategy = 'ALL'  \n",
+    "\n",
     "target_geo = 'TAZ'\n",
     "sample_geo = 'CITY'\n",
     "year = '2045'\n",
@@ -113,7 +119,8 @@
     "new_id_base = 2 * 10 ** 10\n",
     "\n",
     "hdf_in = 'run4032_45.h5'\n",
-    "hdf_target = 'run4032_taz_draft_ypsi.h5'"
+    "hdf_target = 'run4032_taz_draft_ypsi.h5'\n",
+    ""
    ]
   },
   {
@@ -142,10 +149,7 @@
     "geocross = geocross_all.drop_duplicates(target_geo)\n",
     "geocross['SAMPLEGEO'] = geocross[sample_geo]\n",
     "\n",
-    "#two sampling method\n",
-    "# method 1, link target area with 1 sample area having largest overlap (# of HUs in this case)\n",
-    "# method 2, link target area with all overlaping areas, need to keep geocross_all table\n",
-    "if sampling_strategy == 'ALL':\n",
+    "if sampling_strategy != 'LARGEST':\n",
     "    dup_geo = geocross_all.loc[geocross_all.duplicated(target_geo)][target_geo].unique()\n",
     "    geocross_dup = geocross_all.loc[geocross_all[target_geo].isin(dup_geo)]\n",
     "    geocross.loc[geocross[target_geo].isin(geocross_dup[target_geo].unique()), 'SAMPLEGEO'] = geocross[target_geo] + new_id_base\n",
@@ -303,7 +307,8 @@
     "                                        left_on='household_id', right_index= True, how='left' )\n",
     "# persons['PUMA'] = persons['CITY']\n",
     "persons.dropna(axis=0, inplace=True)\n",
-    "persons = persons.astype('int64')\n"
+    "persons = persons.astype('int64')\n",
+    ""
    ]
   },
   {
@@ -364,19 +369,22 @@
    "outputs": [],
    "source": [
     "# sample data for sample_geos\n",
+    "print ('sampling_strategy', sampling_strategy)\n",
+    "\n",
+    "def sample_largest(df_total, geocross, sample_geo):\n",
+    "    dfs = df_total.loc[df_total[sample_geo].isin(geocross[sample_geo].unique())]\n",
+    "    dfs['SAMPLEGEO'] = dfs[sample_geo]                      \n",
+    "\n",
+    "    return dfs.astype('int64')\n",
+    "\n",
     "geocross = geocross.loc[geocross['SAMPLEGEO'] <= new_id_base]\n",
     "\n",
-    "hhs = hhs_total.loc[hhs_total[sample_geo].isin(geocross[sample_geo].unique())]\n",
-    "hhs['SAMPLEGEO'] = hhs[sample_geo]                      \n",
+    "hhs = sample_largest(hhs_total, geocross, sample_geo)\n",
     "hhs['WGTP'] = 1\n",
-    "hhs = hhs.astype('int64')\n",
-    "\n",
-    "pps = pps_total.loc[pps_total[sample_geo].isin(geocross[sample_geo].unique())]\n",
-    "pps['SAMPLEGEO'] = pps[sample_geo]\n",
+    "pps = sample_largest(pps_total, geocross, sample_geo)\n",
     "pps['PWGTP'] = 1\n",
-    "pps = pps.astype('int64')\n",
     "\n",
-    "if sampling_strategy != 'ALL':\n",
+    "if sampling_strategy == 'LARGEST':\n",
     "    hhs.to_csv(prj_name + '_seed_households.csv')\n",
     "    print('seed households table: ', prj_name + '_seed_households.csv')\n",
     "    pps.to_csv(prj_name + '_seed_persons.csv')\n",
@@ -392,33 +400,38 @@
    "outputs": [],
    "source": [
     "# if sampling from all overlapping area\n",
-    "if sampling_strategy == 'ALL':\n",
+    "if sampling_strategy != 'LARGEST':\n",
     "    hhlst = []\n",
     "    hhind = new_id_base\n",
     "    pplst = []\n",
     "    ppind = new_id_base\n",
     "\n",
-    "    for geo, dfg in geocross_dup.groupby(target_geo):   \n",
-    "        for ind, r in dfg.iterrows():\n",
+    "    for geo, dfg in geocross_dup.groupby(target_geo):  \n",
+    "        if sampling_strategy == 'OVERLAP':\n",
+    "            hh_lc = pd.concat( [hhs_total.loc[hhs_total[sample_geo] == dfg[sample_geo].values[0]], \n",
+    "                                hhs_total.loc[(hhs_total[sample_geo].isin(dfg[sample_geo].values[1:])) & \n",
+    "                                                (hhs_total[target_geo] == geo)]\n",
+    "                                ] )\n",
+    "        elif sampling_strategy == 'ALL':\n",
+    "            hh_lc = hhs_total.loc[hhs_total[sample_geo].isin(dfg[sample_geo].values)]\n",
+    "        \n",
+    "        hh_lc['SAMPLEGEO'] = geo + new_id_base \n",
+    "        hh_lc['new_hhid'] = range(hhind, hhind + len(hh_lc))\n",
+    "        hhlst.append(hh_lc)\n",
+    "        hhind += len(hh_lc)\n",
     "\n",
-    "            hh_lc = hhs_total.loc[hhs_total[sample_geo] == r[sample_geo]]\n",
-    "            hh_lc['SAMPLEGEO'] = geo\n",
-    "            hh_lc['new_hhid'] = range(hhind, hhind + len(hh_lc))\n",
-    "            hhlst.append(hh_lc)\n",
-    "            hhind += len(hh_lc)\n",
-    "\n",
-    "            pp_lc = pps_total.loc[pps_total[sample_geo] == r[sample_geo]]\n",
-    "            pp_lc['SAMPLEGEO'] = geo\n",
-    "            pp_lc = pd.merge(pp_lc, hh_lc[['new_hhid']], left_on = 'household_id', right_index =True, how ='left')\n",
-    "            pp_lc['new_pid'] = range(ppind, ppind + len(pp_lc))\n",
-    "            pplst.append(pp_lc)\n",
-    "            ppind += len(pp_lc)\n",
+    "        pp_lc = pps_total.loc[pps_total.household_id.isin(hh_lc.index.values)]\n",
+    "        pp_lc = pd.merge(pp_lc, hh_lc[['new_hhid', 'SAMPLEGEO']], \n",
+    "                                        left_on = 'household_id', right_index =True, how ='left')\n",
+    "        pp_lc.index = range(ppind, ppind + len(pp_lc))\n",
+    "        pplst.append(pp_lc)\n",
+    "        ppind += len(pp_lc)\n",
     "\n",
     "    dfhhs = pd.concat(hhlst)\n",
-    "    dfhhs['SAMPLEGEO'] = dfhhs['SAMPLEGEO'] + new_id_base \n",
     "    dfhhs['WGTP'] = 1\n",
     "    dfhhs.index = dfhhs['new_hhid']\n",
     "    dfhhs.drop('new_hhid', axis=1, inplace=True)\n",
+    "\n",
     "    hhs = pd.concat([hhs, dfhhs])\n",
     "    hhs.index.name = 'household_id'\n",
     "    hhs = hhs.astype('int64')\n",
@@ -427,11 +440,9 @@
     "    print('seed households table: ', prj_name + '_seed_households.csv')\n",
     "\n",
     "    dfpps = pd.concat(pplst)\n",
-    "    dfpps['SAMPLEGEO'] = dfpps['SAMPLEGEO'] + new_id_base\n",
     "    dfpps['PWGTP'] = 1\n",
     "    dfpps['household_id'] = dfpps['new_hhid']\n",
-    "    dfpps.index = dfpps['new_pid']\n",
-    "    dfpps.drop(['new_hhid','new_pid'], axis=1, inplace=True)\n",
+    "    dfpps.drop(['new_hhid'], axis=1, inplace=True)\n",
     "    pps = pd.concat([pps, dfpps])\n",
     "    pps.index.name = 'person_id'\n",
     "    pps = pps.astype('int64')\n",
@@ -445,7 +456,16 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "pps"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [],
+   "execution_count": null,
+   "outputs": []
   }
  ]
 }
